# Meeting_Transcriber

./: .gitignore  IMPLEMENTATION_PLAN.md  PERF_REPORT.md  README.md  glossary.json  pyproject.toml  spec.md
samples/: README.md  korean_sample.result.md
scripts/: perf_sample.py
src/meeting_transcriber/: __init__.py  cli.py  config.py  extract.py  formatter.py  glossary.py  hardware.py  postprocess.py  transcribe.py  translate.py
tests/: test_cli.py  test_config.py  test_extract.py  test_formatter.py  test_glossary.py  test_hardware.py  test_postprocess.py  test_transcribe.py  test_transcribe_cache.py  test_translate.py
tests/fixtures/expected/: sample_output.html  sample_output.ko.srt  sample_output.md  sample_output.srt
tests/fixtures/samples/: glossary.sample.json  sample_transcript.ko.txt
